# Minecraft

./: .gitmodules  CMakeLists.txt  Makefile  README.md
client/: Makefile  README.md  minecraft.c
engine/: Makefile  README.md
engine/private/window/: mc_window_wayland.c  mc_window_xlib.c
engine/public/: include.h
engine/public/misc/: mc_error.h  mc_includes.h  mc_types.h
engine/public/window/: mc_window.h
res/shaders/: shader.vert
server/: Makefile  README.md
src/: appSurface.hpp  entry.cpp  fileUtils.hpp  header.hpp  minecraft.cpp  minecraft.hpp  physicalDeviceHelper.hpp  physicalDeviceSupport.hpp  renderer.hpp  swapChain.hpp  timer.hpp  vector.hpp  vertex.hpp  vertexBuffer.hpp  vulkanUtils.hpp
