CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Minecraft VERSION 0.0.1)

FIND_PACKAGE(Vulkan)
FIND_PACKAGE(X11)

FILE(GLOB_RECURSE Engine_SRC CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/engine/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/engine/*.c"
)

ADD_LIBRARY(Engine "${Engine_SRC}")
TARGET_INCLUDE_DIRECTORIES(Engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/engine/" "${X11_INCLUDE_DIR}")
TARGET_LINK_LIBRARIES(Engine "${Vulkan_LIBRARIES}" "${X11_LIBRARIES}")

if(WIN32)
    TARGET_COMPILE_DEFINITIONS(Engine PRIVATE MC_OS_WINDOWS)
elseif(UNIX AND NOT APPLE AND NOT CYGWIN)
    TARGET_COMPILE_DEFINITIONS(Engine PRIVATE MC_OS_LINUX)
    TARGET_COMPILE_DEFINITIONS(Engine PRIVATE MC_DWM_XLIB)
    TARGET_COMPILE_DEFINITIONS(Engine PRIVATE MC_CPU_X86_64)
endif()

FILE(GLOB_RECURSE Client_SRC CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/client/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/client/*.c"
)

ADD_EXECUTABLE(Client "${Client_SRC}")

TARGET_INCLUDE_DIRECTORIES(Client PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
TARGET_LINK_LIBRARIES(Client Engine)