CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Minecraft VERSION 0.0.1)

SET(CMAKE_CXX_STANDARD          17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)

FILE(GLOB_RECURSE Minecraft_SRC CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
)

ADD_EXECUTABLE(Minecraft "${Minecraft_SRC}")

TARGET_INCLUDE_DIRECTORIES(Minecraft PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/dependencies"
    "${CMAKE_CURRENT_SOURCE_DIR}/src"
)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/Vulkan-Headers")

TARGET_LINK_LIBRARIES(Minecraft Vulkan::Headers glfw "${Vulkan_LIBRARIES}")

if(WIN32)
    TARGET_COMPILE_DEFINITIONS(Minecraft PRIVATE MC_WINDOWS)
elseif(UNIX AND NOT APPLE AND NOT CYGWIN)
    TARGET_COMPILE_DEFINITIONS(Minecraft PRIVATE MC_LINUX)
endif()